Set max-height to avoid start-up flicker

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     width:95%;
     margin: auto;
     max-width:960px;
+    max-height:540px;
     border: solid grey 2px;
     position: absolute;
     top: 0; bottom: 0; right: 0; left: 0;
